--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,12 +46,12 @@
         </svg>
       </button>
     </div>
-    <ul class="header-mob-list">
+    <ul class="header-mob-list menu" id="menu">
       <li class="header-mob-item">
-        <a class="header-mob-link" href="#about">About us</a>
+        <a class="header-mob-link" href="#about-us">About us</a>
       </li>
       <li class="header-mob-item">
-        <a class="header-mob-link" href="#products">Our products</a>
+        <a class="header-mob-link" href="#our-products">Our products</a>
       </li>
       <li class="header-mob-item">
         <a class="header-mob-link" href="#prices">Prices</a>
