--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -5,52 +5,32 @@
       <li class="price-li">
         <div class="price-li-wrap">
           <a href="" class="a-price">
-            <div class="ul-li-div">
-              <ul class="price-ul-two">
-                <li class="ul-li-name"><p class="li-name-p">CHAIRS</p></li>
-                <li class="ul-li-money"><p class="li-name-m">from 200$</p></li>
-              </ul>
-            </div>
+            <p class="price-p"><span class="price-span-one">CHAIRS</span></p>
+            <p class="price-p-two"><span class="price-span-two">from 200$</span></p>
           </a>
         </div>
       </li>
       <li class="price-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price"
-            ><div class="ul-li-div">
-              <ul class="price-ul-two">
-                <li class="ul-li-name"><p class="li-name-p">TABLETS</p></li>
-                <li class="ul-li-money"><p class="li-name-m">from 250$</p></li>
-              </ul>
-            </div>
+          <a href="" class="a-price">
+            <p class="price-p"><span class="price-span-one">TABLETS</span></p>
+            <p class="price-p-two"><span class="price-span-two">from 250$</span></p>
           </a>
         </div>
       </li>
       <li class="price-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price"
-            ><div class="ul-li-div">
-              <ul class="price-ul-two">
-                <li class="ul-li-name">
-                  <p href="" class="li-name-p">DRESSERS</p>
-                </li>
-                <li class="ul-li-money">
-                  <p href="" class="li-name-m">from 300$</p>
-                </li>
-              </ul>
-            </div>
+          <a href="" class="a-price">
+            <p class="price-p"><span class="price-span-one">DRESSERS</span></p>
+            <p class="price-p-two"><span class="price-span-two">from 300$</span></p>
           </a>
         </div>
       </li>
       <li class="price-li price-li-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price"
-            ><div class="ul-li-div">
-              <ul class="price-ul-two">
-                <li class="ul-li-name"><p class="li-name-p">SOFAS</p></li>
-                <li class="ul-li-money"><p class="li-name-m">from 500$</p></li>
-              </ul>
-            </div>
+          <a href="" class="a-price">
+            <p class="price-p"><span class="price-span-one">SOFAS</span></p>
+            <p class="price-p-two"><span class="price-span-two">from 500$</span></p>
           </a>
         </div>
       </li>
