--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <div class="footer-wrapper">
       <div class="footer-contacts-wrap">
-        <a href="./index.html" class="footer-logo">
+        <a href="./index.html" class="footer-logo" aria-label="Minimal">
           <svg class="footer-logo-icon" width="100" height="16">
             <use href="./img/footer/svg-sprite.svg#icon-logo"></use>
           </svg>
@@ -74,6 +74,7 @@
             class="footer-socials-link"
             target="_blank"
             rel="nofollow"
+            aria-label="Our Facebook page"
           >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-facebook"></use>
@@ -86,6 +87,7 @@
             class="footer-socials-link"
             target="_blank"
             rel="nofollow"
+            aria-label="Our Instagram page"
           >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-instagram"></use>
@@ -98,6 +100,7 @@
             class="footer-socials-link"
             target="_blank"
             rel="nofollow"
+            aria-label="Our YouTube page"
           >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-youtube"></use>
