--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -6,15 +6,19 @@
         <div class="price-li-wrap">
           <a href="" class="a-price">
             <p class="price-p"><span class="price-span-one">CHAIRS</span></p>
-            <p class="price-p-two"><span class="price-span-two">from 200$</span></p>
+            <p class="price-p-two">
+              <span class="price-span-two">from 200$</span>
+            </p>
           </a>
         </div>
       </li>
       <li class="price-li">
         <div class="price-li-wrap">
           <a href="" class="a-price">
-            <p class="price-p"><span class="price-span-one">TABLETS</span></p>
-            <p class="price-p-two"><span class="price-span-two">from 250$</span></p>
+            <p class="price-p"><span class="price-span-one">TABLES</span></p>
+            <p class="price-p-two">
+              <span class="price-span-two">from 250$</span>
+            </p>
           </a>
         </div>
       </li>
@@ -22,7 +26,9 @@
         <div class="price-li-wrap">
           <a href="" class="a-price">
             <p class="price-p"><span class="price-span-one">DRESSERS</span></p>
-            <p class="price-p-two"><span class="price-span-two">from 300$</span></p>
+            <p class="price-p-two">
+              <span class="price-span-two">from 300$</span>
+            </p>
           </a>
         </div>
       </li>
@@ -30,7 +36,9 @@
         <div class="price-li-wrap">
           <a href="" class="a-price">
             <p class="price-p"><span class="price-span-one">SOFAS</span></p>
-            <p class="price-p-two"><span class="price-span-two">from 500$</span></p>
+            <p class="price-p-two">
+              <span class="price-span-two">from 500$</span>
+            </p>
           </a>
         </div>
       </li>
