--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -6,8 +6,8 @@
         <picture>
           <source
             srcset="
-              ./img/bestsellers/bestsellers-1-desk-1x.jpg 1x,
-              ./img/bestsellers/bestsellers-1-desk-2x.jpg 2x
+              /img/bestsellers/bestsellers-1-desk-1x.jpg 1x,
+              /img/bestsellers/bestsellers-1-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
@@ -20,14 +20,14 @@
           />
           <source
             srcset="
-              ./img/bestsellers/bestsellers-1-mob-1x.jpg 1x,
-              ./img/bestsellers/bestsellers-1-mob-2x.jpg 2x
+              /img/bestsellers/bestsellers-1-mob-1x.jpg 1x,
+              /img/bestsellers/bestsellers-1-mob-2x.jpg 2x
             "
             media="(min-width: 320px)"
           />
           <img
             class="best-1-img"
-            src="../img/bestsellers/bestsellers-1-desk-1x.jpg"
+            src="/img/bestsellers/bestsellers-1-desk-1x.jpg"
             alt="furniture"
           />
         </picture>
@@ -40,8 +40,8 @@
           <picture>
             <source
               srcset="
-                ./img/bestsellers/bestsellers-2-desk-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-2-desk-2x.jpg 2x
+                /img/bestsellers/bestsellers-2-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-2-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
             />
@@ -55,13 +55,13 @@
             />
             <source
               srcset="
-                ./img/bestsellers/bestsellers-2-mob-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-2-mob-2x.jpg 2x
+                /img/bestsellers/bestsellers-2-mob-1x.jpg 1x,
+                /img/bestsellers/bestsellers-2-mob-2x.jpg 2x
               "
               media="(min-width: 320px)"
             />
             <img
-              src="../img/bestsellers/bestsellers-2-desk-1x.jpg"
+              src="/img/bestsellers/bestsellers-2-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
@@ -72,8 +72,8 @@
           <picture>
             <source
               srcset="
-                ./img/bestsellers/bestsellers-3-desk-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-3-desk-2x.jpg 2x
+                /img/bestsellers/bestsellers-3-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-3-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
             />
@@ -87,13 +87,13 @@
             />
             <source
               srcset="
-                ./img/bestsellers/bestsellers-3-mob-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-3-mob-2x.jpg 2x
+                /img/bestsellers/bestsellers-3-mob-1x.jpg 1x,
+                /img/bestsellers/bestsellers-3-mob-2x.jpg 2x
               "
               media="(min-width: 320px)"
             />
             <img
-              src="../img/bestsellers/bestsellers-3-desk-1x.jpg"
+              src="/img/bestsellers/bestsellers-3-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
@@ -104,8 +104,8 @@
           <picture>
             <source
               srcset="
-                ./img/bestsellers/bestsellers-4-desk-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-4-desk-2x.jpg 2x
+                /img/bestsellers/bestsellers-4-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-4-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
             />
@@ -118,7 +118,7 @@
               media="(min-width:768px)"
             />
             <img
-              src="../img/bestsellers/bestsellers-4-desk-1x.jpg"
+              src="/img/bestsellers/bestsellers-4-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
@@ -129,8 +129,8 @@
           <picture>
             <source
               srcset="
-                ./img/bestsellers/bestsellers-5-desk-1x.jpg 1x,
-                ./img/bestsellers/bestsellers-5-desk-2x.jpg 2x
+                /img/bestsellers/bestsellers-5-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-5-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
             />
@@ -144,7 +144,7 @@
             />
 
             <img
-              src="../img/bestsellers/bestsellers-5-desk-1x.jpg"
+              src="/img/bestsellers/bestsellers-5-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
