--- a/src/partials/ourproducts.html
+++ b/src/partials/ourproducts.html
@@ -6,8 +6,8 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ./img/ourproducts/ourproduct-1-desk-1x.jpg 1x,
-              ./img/ourproducts/ourproduct-1-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-1-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-1-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
@@ -21,13 +21,13 @@
           />
           <source
             srcset="
-              ./img/ourproducts/ourproduct-1-mob-1x.jpg 1x,
-              ./img/ourproducts/ourproduct-1-mob-2x.jpg 2x
+              /img/ourproducts/ourproduct-1-mob-1x.jpg 1x,
+              /img/ourproducts/ourproduct-1-mob-2x.jpg 2x
             "
             media="(min-width: 320px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-1-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-1-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -38,21 +38,21 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-2-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-2-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-2-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-2-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
           <source
             srcset="
-              ../img/ourproducts/ourproduct-2-tab-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-2-tab-2x.jpg 2x
+              /img/ourproducts/ourproduct-2-tab-1x.jpg 1x,
+              /img/ourproducts/ourproduct-2-tab-2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
 
           <img
-            src="../img/ourproducts/ourproduct-2-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-2-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -63,13 +63,13 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-3-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-3-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-3-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-3-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-3-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-3-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -80,13 +80,13 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-4-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-4-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-4-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-4-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-4-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-4-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
