--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -16,7 +16,7 @@
         <a href="" class="a-price"
           ><div class="ul-li-div">
             <ul class="price-ul-two">
-              <li class="ul-li-name"><p class="li-name-p">TABLETS</p></li>
+              <li class="ul-li-name"><p class="li-name-p">TABLES</p></li>
               <li class="ul-li-money"><p class="li-name-m">from 250$</p></li>
             </ul>
           </div>
