--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -61,7 +61,7 @@
               media="(min-width: 320px)"
             />
             <img
-              src="../img/bestsellers/bestsellers-2-desk-1x.jpg"
+              src="/img/bestsellers/bestsellers-2-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
