--- a/src/css/ourproducts.css
+++ b/src/css/ourproducts.css
@@ -30,7 +30,7 @@
   text-align: center;
 }
 .ourpoducts-list {
-  padding-top: 30px;
+  margin-top: 30px;
 }
 
 @media screen and (min-width: 768px) {
