--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-container">
-    <a class="header-logo-link" href="./index.html" class="">
+    <a class="header-logo-link" href="./index.html">
       <svg class="header-logo" width="100" height="16">
         <use href="/img/header/svg-sprite.svg#icon-logo"></use>
       </svg>
@@ -35,7 +35,7 @@
   </div>
   <div class="mob-menu is-hidden menu-active" data-menu>
     <div class="mob-container">
-      <a class="header-logo-link" href="./index.html" class="">
+      <a class="header-logo-link" href="./index.html">
         <svg class="header-logo" width="100" height="16">
           <use href="/img/header/svg-sprite.svg#icon-logo"></use>
         </svg>
