--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -4,7 +4,7 @@
     <ul class="price-ul-one">
       <li class="price-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price">
+          <a href="https://www.youtube.com/channel/UCn8W3K5wPY4ZeLkXlXrYnEw" class="a-price" aria-label="CHAIRS">
             <p class="price-p"><span class="price-span-one">CHAIRS</span></p>
             <p class="price-p-two">
               <span class="price-span-two">from 200$</span>
@@ -14,7 +14,7 @@
       </li>
       <li class="price-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price">
+          <a href="https://www.youtube.com/channel/UCn8W3K5wPY4ZeLkXlXrYnEw" class="a-price" aria-label="TABLES">
             <p class="price-p"><span class="price-span-one">TABLES</span></p>
             <p class="price-p-two">
               <span class="price-span-two">from 250$</span>
@@ -24,7 +24,7 @@
       </li>
       <li class="price-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price">
+          <a href="https://www.youtube.com/channel/UCn8W3K5wPY4ZeLkXlXrYnEw" class="a-price" aria-label="DRESSERS">
             <p class="price-p"><span class="price-span-one">DRESSERS</span></p>
             <p class="price-p-two">
               <span class="price-span-two">from 300$</span>
@@ -34,7 +34,7 @@
       </li>
       <li class="price-li price-li-li">
         <div class="price-li-wrap">
-          <a href="" class="a-price">
+          <a href="https://www.youtube.com/channel/UCn8W3K5wPY4ZeLkXlXrYnEw" class="a-price" aria-label="SOFAS">
             <p class="price-p"><span class="price-span-one">SOFAS</span></p>
             <p class="price-p-two">
               <span class="price-span-two">from 500$</span>
