--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-container">
-    <a class="header-logo-link" href="./index.html">
+    <a class="header-logo-link" href="./index.html" aria-label="logo">
       <svg class="header-logo" width="100" height="16">
         <use href="/img/header/svg-sprite.svg#icon-logo"></use>
       </svg>
@@ -27,7 +27,7 @@
         </li>
       </ul>
     </nav>
-    <button class="header-button-mob" type="button" data-menu-open>
+    <button class="header-button-mob" type="button" aria-label="menu-open" data-menu-open>
       <svg class="header-button-icon" width="32" height="32">
         <use href="/img/header/svg-sprite.svg#icon-menu-open"></use>
       </svg>
@@ -40,7 +40,7 @@
           <use href="/img/header/svg-sprite.svg#icon-logo"></use>
         </svg>
       </a>
-      <button class="header-button-close" type="button" data-menu-close>
+      <button class="header-button-close" type="button" aria-label="menu-close" data-menu-close>
         <svg class="header-close-icon" width="32" height="32">
           <use href="/img/header/svg-sprite.svg#icon-menu-close"></use>
         </svg>
